grilla de galería
separación entre la grilla para vista web

--- a/secciones/portfolio/deportiva/index.html
+++ b/secciones/portfolio/deportiva/index.html
@@ -66,167 +66,167 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/yf4dxdx/deportiva1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/yf4dxdx/deportiva1.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/ZS2nRsR/deportiva2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/ZS2nRsR/deportiva2.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/ckNkMZ7/deportiva3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/ckNkMZ7/deportiva3.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/jZLVsw1/deportiva4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/jZLVsw1/deportiva4.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/RSvQScC/deportiva5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/RSvQScC/deportiva5.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/ZKD4yN1/deportiva6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/ZKD4yN1/deportiva6.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/jVrvtkB/deportiva7.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/jVrvtkB/deportiva7.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/Dg7Nx9d/deportiva8.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/Dg7Nx9d/deportiva8.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/tz4KnZ8/deportiva9.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/tz4KnZ8/deportiva9.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6"> <!-- CAMBIAR TAMAÑO DE IMAGEN 10-->
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/t819LD3/deportiva10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/t819LD3/deportiva10.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/GxfDVM9/deportiva11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/GxfDVM9/deportiva11.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/6nQS37Z/deportiva12.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/6nQS37Z/deportiva12.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/BTyXTJN/deportiva13.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/BTyXTJN/deportiva13.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/19hpRYt/deportiva14.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/19hpRYt/deportiva14.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img src="https://i.ibb.co/yX4Tb1B/deportiva15.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img class="foto" src="https://i.ibb.co/yX4Tb1B/deportiva15.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img src="https://i.ibb.co/FKpCXqG/deportiva16.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img class="foto" src="https://i.ibb.co/FKpCXqG/deportiva16.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img src="https://i.ibb.co/4Fbzqfk/deportiva17.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img class="foto" src="https://i.ibb.co/4Fbzqfk/deportiva17.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img src="https://i.ibb.co/0Bjj8Bh/deportiva18.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img class="foto" src="https://i.ibb.co/0Bjj8Bh/deportiva18.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 19" data-bs-toggle="modal" data-bs-target="#modalImage19"><img src="https://i.ibb.co/6Wtbxy6/deportiva19.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 19" data-bs-toggle="modal" data-bs-target="#modalImage19"><img class="foto" src="https://i.ibb.co/6Wtbxy6/deportiva19.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 20" data-bs-toggle="modal" data-bs-target="#modalImage20"><img src="https://i.ibb.co/GFPD5tD/deportiva20.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 20" data-bs-toggle="modal" data-bs-target="#modalImage20"><img class="foto" src="https://i.ibb.co/GFPD5tD/deportiva20.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 21" data-bs-toggle="modal" data-bs-target="#modalImage21"><img src="https://i.ibb.co/J2kLhxx/deportiva21.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 21" data-bs-toggle="modal" data-bs-target="#modalImage21"><img class="foto" src="https://i.ibb.co/J2kLhxx/deportiva21.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 22" data-bs-toggle="modal" data-bs-target="#modalImage22"><img src="https://i.ibb.co/xsZQ9Xm/deportiva22.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 22" data-bs-toggle="modal" data-bs-target="#modalImage22"><img class="foto"src="https://i.ibb.co/xsZQ9Xm/deportiva22.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 23" data-bs-toggle="modal" data-bs-target="#modalImage23"><img src="https://i.ibb.co/crpL2C5/deportiva23.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 23" data-bs-toggle="modal" data-bs-target="#modalImage23"><img class="foto"src="https://i.ibb.co/crpL2C5/deportiva23.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 24" data-bs-toggle="modal" data-bs-target="#modalImage24"><img src="https://i.ibb.co/qFpVH73/deportiva24.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 24" data-bs-toggle="modal" data-bs-target="#modalImage24"><img class="foto" src="https://i.ibb.co/qFpVH73/deportiva24.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6"> <!-- CAMBIAR TAMAÑO DE IMAGEN 10-->
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 25" data-bs-toggle="modal" data-bs-target="#modalImage25"><img src="https://i.ibb.co/BPcrksv/deportiva25.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 25" data-bs-toggle="modal" data-bs-target="#modalImage25"><img class="foto"src="https://i.ibb.co/BPcrksv/deportiva25.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 26" data-bs-toggle="modal" data-bs-target="#modalImage26"><img src="https://i.ibb.co/CmtXq2q/deportiva26.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 26" data-bs-toggle="modal" data-bs-target="#modalImage26"><img class="foto"src="https://i.ibb.co/CmtXq2q/deportiva26.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 27" data-bs-toggle="modal" data-bs-target="#modalImage27"><img src="https://i.ibb.co/FXC5p7Z/deportiva27.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 27" data-bs-toggle="modal" data-bs-target="#modalImage27"><img class="foto"src="https://i.ibb.co/FXC5p7Z/deportiva27.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 28" data-bs-toggle="modal" data-bs-target="#modalImage28"><img src="https://i.ibb.co/QfgPNvr/deportiva28.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 28" data-bs-toggle="modal" data-bs-target="#modalImage28"><img class="foto"src="https://i.ibb.co/QfgPNvr/deportiva28.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 29" data-bs-toggle="modal" data-bs-target="#modalImage29"><img src="https://i.ibb.co/xLb7ZGZ/deportiva29.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 29" data-bs-toggle="modal" data-bs-target="#modalImage29"><img class="foto" src="https://i.ibb.co/xLb7ZGZ/deportiva29.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 30" data-bs-toggle="modal" data-bs-target="#modalImage30"><img src="https://i.ibb.co/g6JyCCz/deportiva30.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 30" data-bs-toggle="modal" data-bs-target="#modalImage30"><img class="foto" src="https://i.ibb.co/g6JyCCz/deportiva30.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 31" data-bs-toggle="modal" data-bs-target="#modalImage31"><img src="https://i.ibb.co/j4LGn2Q/deportiva31.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 31" data-bs-toggle="modal" data-bs-target="#modalImage31"><img class="foto" src="https://i.ibb.co/j4LGn2Q/deportiva31.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 32" data-bs-toggle="modal" data-bs-target="#modalImage32"><img src="https://i.ibb.co/PDJK5km/deportiva32.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 32" data-bs-toggle="modal" data-bs-target="#modalImage32"><img class="foto" src="https://i.ibb.co/PDJK5km/deportiva32.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 33" data-bs-toggle="modal" data-bs-target="#modalImage33"><img src="https://i.ibb.co/yY5VKbL/FOTO-DE-CARATULA.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 33" data-bs-toggle="modal" data-bs-target="#modalImage33"><img class="foto" src="https://i.ibb.co/yY5VKbL/FOTO-DE-CARATULA.jpg"> </a>            
             </div>
           </div>
   
