--- a/secciones/portfolio/teatro/aisa/index.html
+++ b/secciones/portfolio/teatro/aisa/index.html
@@ -67,62 +67,62 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/9W0hNmb/aisa1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/9W0hNmb/aisa1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/NFPMWMd/aisa2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/NFPMWMd/aisa2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/cyp1Z0D/aisa3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/cyp1Z0D/aisa3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/68f7TBK/aisa4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/68f7TBK/aisa4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/Q9v8v1P/aisa5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/Q9v8v1P/aisa5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/2PJrXzC/aisa6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/2PJrXzC/aisa6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/vJXWMxT/aisa7.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/vJXWMxT/aisa7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/s5p97fv/aisa8.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/s5p97fv/aisa8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/ds97Dhv/aisa9.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/ds97Dhv/aisa9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/tcSgjnV/aisa10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/tcSgjnV/aisa10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/LkH5DYj/aisa11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/LkH5DYj/aisa11.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/6Ywm1vs/aisa-caratula.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/6Ywm1vs/aisa-caratula.jpg"   > </a>            
             </div>
           </div>
        
