--- a/secciones/portfolio/teatro/canta/index.html
+++ b/secciones/portfolio/teatro/canta/index.html
@@ -66,72 +66,72 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/cwwvhtG/canta1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/cwwvhtG/canta1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/7vj2N7H/canta2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/7vj2N7H/canta2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/0GYtLcW/canta3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/0GYtLcW/canta3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/w09TMWt/canta4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/w09TMWt/canta4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/GV7QqNx/canta5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/GV7QqNx/canta5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/Z2L0VZ5/canta6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/Z2L0VZ5/canta6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/YkHLLRb/canta7.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/YkHLLRb/canta7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/nRc3WV8/canta8.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/nRc3WV8/canta8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/t21BCsq/canta9.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/t21BCsq/canta9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/YywssXc/canta10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/YywssXc/canta10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/3dgz20T/canta11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/3dgz20T/canta11.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/J7CzLxj/canta12.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/J7CzLxj/canta12.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/kQRXq0s/canta13.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/kQRXq0s/canta13.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/wsgcSXF/canta-caratula.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/wsgcSXF/canta-caratula.jpg"   > </a>
             </div>
           </div>
           
