--- a/secciones/portfolio/teatro/gala/index.html
+++ b/secciones/portfolio/teatro/gala/index.html
@@ -79,92 +79,92 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/SVd1tzh/gala1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/SVd1tzh/gala1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/RTBrk8T/gala2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/RTBrk8T/gala2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/56zrXsn/gala3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/56zrXsn/gala3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/qsywhV4/gala4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/qsywhV4/gala4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/rFcTkSh/gala5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/rFcTkSh/gala5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/ZBP7HhQ/gala6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/ZBP7HhQ/gala6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/h2VXRkf/gala7.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/h2VXRkf/gala7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/mBqWG2F/gala8.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/mBqWG2F/gala8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/V9WZgJq/gala9.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/V9WZgJq/gala9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/y6MYfLC/gala10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/y6MYfLC/gala10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/nwMFkv4/gala11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/nwMFkv4/gala11.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/XC2PHgQ/gala12.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/XC2PHgQ/gala12.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/PzCPmG6/gala13.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/PzCPmG6/gala13.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/PCn3Jfy/gala14.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/PCn3Jfy/gala14.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img src="https://i.ibb.co/W5ckQ5Q/gala15.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img class="foto" src="https://i.ibb.co/W5ckQ5Q/gala15.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img src="https://i.ibb.co/W0PWsZq/gala16.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img class="foto" src="https://i.ibb.co/W0PWsZq/gala16.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img src="https://i.ibb.co/VS6XX1j/gala17.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img class="foto" src="https://i.ibb.co/VS6XX1j/gala17.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img src="https://i.ibb.co/r3Cwc46/gala-caratula.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img class="foto" src="https://i.ibb.co/r3Cwc46/gala-caratula.jpg"   > </a>
             </div>
           </div>
           
