--- a/secciones/portfolio/teatro/miserables/index.html
+++ b/secciones/portfolio/teatro/miserables/index.html
@@ -68,182 +68,182 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/68kPHRs/miserables1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/68kPHRs/miserables1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/bbKC0jx/miserables2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/bbKC0jx/miserables2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/0B37dCv/miserables3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/0B37dCv/miserables3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/LQN4rtP/miserables4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/LQN4rtP/miserables4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/SdSsMKQ/miserables5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/SdSsMKQ/miserables5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/Z28hzz6/miserables6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/Z28hzz6/miserables6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/XXN9WB3/miserables7.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/XXN9WB3/miserables7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/fCs2mCD/miserables8.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/fCs2mCD/miserables8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/v1pGrt1/miserables9.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/v1pGrt1/miserables9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/SQx87gL/miserables10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/SQx87gL/miserables10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/0ns58W2/miserables11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/0ns58W2/miserables11.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/tPkZDV3/miserables12.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/tPkZDV3/miserables12.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/WxfRcQT/miserables13.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/WxfRcQT/miserables13.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/R986qTP/miserables14.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/R986qTP/miserables14.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img src="https://i.ibb.co/t235vYK/miserables15.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img class="foto" src="https://i.ibb.co/t235vYK/miserables15.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img src="https://i.ibb.co/Jx3L94v/miserables16.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img class="foto" src="https://i.ibb.co/Jx3L94v/miserables16.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img src="https://i.ibb.co/1bThrp7/miserables17.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img class="foto" src="https://i.ibb.co/1bThrp7/miserables17.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img src="https://i.ibb.co/hHh3hjr/miserables18.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img class="foto" src="https://i.ibb.co/hHh3hjr/miserables18.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 19" data-bs-toggle="modal" data-bs-target="#modalImage19"><img src="https://i.ibb.co/qDSSDdD/miserables19.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 19" data-bs-toggle="modal" data-bs-target="#modalImage19"><img class="foto" src="https://i.ibb.co/qDSSDdD/miserables19.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 20" data-bs-toggle="modal" data-bs-target="#modalImage20"><img src="https://i.ibb.co/gM3YZGp/miserables20.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 20" data-bs-toggle="modal" data-bs-target="#modalImage20"><img class="foto" src="https://i.ibb.co/gM3YZGp/miserables20.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 23" data-bs-toggle="modal" data-bs-target="#modalImage23"><img src="https://i.ibb.co/DpBZBZR/miserables23.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 23" data-bs-toggle="modal" data-bs-target="#modalImage23"><img class="foto" src="https://i.ibb.co/DpBZBZR/miserables23.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 24" data-bs-toggle="modal" data-bs-target="#modalImage24"><img src="https://i.ibb.co/1Tky7p2/miserables24.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 24" data-bs-toggle="modal" data-bs-target="#modalImage24"><img class="foto" src="https://i.ibb.co/1Tky7p2/miserables24.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 25" data-bs-toggle="modal" data-bs-target="#modalImage25"><img src="https://i.ibb.co/XL7cpxZ/miserables25.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 25" data-bs-toggle="modal" data-bs-target="#modalImage25"><img class="foto" src="https://i.ibb.co/XL7cpxZ/miserables25.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 26" data-bs-toggle="modal" data-bs-target="#modalImage26"><img src="https://i.ibb.co/SnpKZVv/miserables26.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 26" data-bs-toggle="modal" data-bs-target="#modalImage26"><img class="foto" src="https://i.ibb.co/SnpKZVv/miserables26.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 27" data-bs-toggle="modal" data-bs-target="#modalImage27"><img src="https://i.ibb.co/ctVtjPZ/miserables27.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 27" data-bs-toggle="modal" data-bs-target="#modalImage27"><img class="foto" src="https://i.ibb.co/ctVtjPZ/miserables27.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 28" data-bs-toggle="modal" data-bs-target="#modalImage28"><img src="https://i.ibb.co/RPcxf6P/miserables28.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 28" data-bs-toggle="modal" data-bs-target="#modalImage28"><img class="foto" src="https://i.ibb.co/RPcxf6P/miserables28.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 29" data-bs-toggle="modal" data-bs-target="#modalImage29"><img src="https://i.ibb.co/7KBfjz8/miserables29.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 29" data-bs-toggle="modal" data-bs-target="#modalImage29"><img class="foto" src="https://i.ibb.co/7KBfjz8/miserables29.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 30" data-bs-toggle="modal" data-bs-target="#modalImage30"><img src="https://i.ibb.co/Y0zbnd2/miserables30.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 30" data-bs-toggle="modal" data-bs-target="#modalImage30"><img class="foto" src="https://i.ibb.co/Y0zbnd2/miserables30.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 31" data-bs-toggle="modal" data-bs-target="#modalImage31"><img src="https://i.ibb.co/d6GK6Jc/miserables31.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 31" data-bs-toggle="modal" data-bs-target="#modalImage31"><img class="foto" src="https://i.ibb.co/d6GK6Jc/miserables31.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 32" data-bs-toggle="modal" data-bs-target="#modalImage32"><img src="https://i.ibb.co/1drMTx7/miserables32.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 32" data-bs-toggle="modal" data-bs-target="#modalImage32"><img class="foto" src="https://i.ibb.co/1drMTx7/miserables32.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 33" data-bs-toggle="modal" data-bs-target="#modalImage33"><img src="https://i.ibb.co/rtgpKPY/miserables33.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 33" data-bs-toggle="modal" data-bs-target="#modalImage33"><img class="foto" src="https://i.ibb.co/rtgpKPY/miserables33.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 34" data-bs-toggle="modal" data-bs-target="#modalImage34"><img src="https://i.ibb.co/r7NgtMC/miserables34.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 34" data-bs-toggle="modal" data-bs-target="#modalImage34"><img class="foto" src="https://i.ibb.co/r7NgtMC/miserables34.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 35" data-bs-toggle="modal" data-bs-target="#modalImage35"><img src="https://i.ibb.co/FXSTPJv/miserables35.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 35" data-bs-toggle="modal" data-bs-target="#modalImage35"><img class="foto" src="https://i.ibb.co/FXSTPJv/miserables35.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 36" data-bs-toggle="modal" data-bs-target="#modalImage36"><img src="https://i.ibb.co/wgv6vZ6/miserables36.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 36" data-bs-toggle="modal" data-bs-target="#modalImage36"><img class="foto" src="https://i.ibb.co/wgv6vZ6/miserables36.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 37" data-bs-toggle="modal" data-bs-target="#modalImage37"><img src="https://i.ibb.co/8d9XZjf/miserables37.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 37" data-bs-toggle="modal" data-bs-target="#modalImage37"><img class="foto" src="https://i.ibb.co/8d9XZjf/miserables37.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 38" data-bs-toggle="modal" data-bs-target="#modalImage38"><img src="https://i.ibb.co/xHNqmFd/miserables-caratula.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 38" data-bs-toggle="modal" data-bs-target="#modalImage38"><img class="foto" src="https://i.ibb.co/xHNqmFd/miserables-caratula.jpg"   > </a>            
             </div>
           </div>
           
