--- a/secciones/portfolio/teatro/palabras/index.html
+++ b/secciones/portfolio/teatro/palabras/index.html
@@ -67,42 +67,42 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/wp0cFSy/palabras1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/wp0cFSy/palabras1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/28jdSrq/palabras2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/28jdSrq/palabras2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/Q8D34yb/palabras3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/Q8D34yb/palabras3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/c8bwFXq/palabras4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/c8bwFXq/palabras4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/j6KqDzF/palabras5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/j6KqDzF/palabras5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/thsDWYp/palabras6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/thsDWYp/palabras6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/9pzM4Rc/palabras7.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/9pzM4Rc/palabras7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/R3JcWsD/palabras-caratula.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/R3JcWsD/palabras-caratula.jpg"   > </a>
             </div>
           </div>
          
