--- a/secciones/portfolio/teatro/partida/index.html
+++ b/secciones/portfolio/teatro/partida/index.html
@@ -67,72 +67,72 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/PwDHqrH/partida1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/PwDHqrH/partida1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/nw1cTQX/partida2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/nw1cTQX/partida2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/FH5FDmB/partida3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/FH5FDmB/partida3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/m4RHH2k/partida4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/m4RHH2k/partida4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/yf9ywsY/partida5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/yf9ywsY/partida5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/Jj2vByP/partida6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/Jj2vByP/partida6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/J5kNWJ4/partida7.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/J5kNWJ4/partida7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/8m8t3Jg/partida8.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/8m8t3Jg/partida8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/8cp2Str/partida9.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/8cp2Str/partida9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/gZ7Hfrs/partida10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/gZ7Hfrs/partida10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/1dSP5fJ/partida11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/1dSP5fJ/partida11.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/37Qfjgf/partida12.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/37Qfjgf/partida12.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/5j0CCr8/partida13.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/5j0CCr8/partida13.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/2Nc5W0Q/partida-caratula.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/2Nc5W0Q/partida-caratula.jpg"   > </a>
             </div>
           </div>
           
