--- a/secciones/portfolio/producto/telares/index.html
+++ b/secciones/portfolio/producto/telares/index.html
@@ -67,34 +67,32 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/YLLqkB8/telares1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/YLLqkB8/telares1.jpg" > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/kXDkR7H/telares2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/kXDkR7H/telares2.jpg" > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/sFMrhNc/telares3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/sFMrhNc/telares3.jpg" > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/Y8GMZDt/telares4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/Y8GMZDt/telares4.jpg" > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/4T754ct/telares-caratula.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/4T754ct/telares-caratula.jpg" > </a>            
             </div>
           </div>
     
-          
-  
-
       </div>
+    </div>
 
     <!-- MODAL GALLERY-->
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
@@ -134,6 +132,7 @@
         <div class="modal-content">
           <img src="https://i.ibb.co/4T754ct/telares-caratula.jpg">
       </div>
+    </div>
     </div>
   
 
