--- a/secciones/portfolio/retratos/autorretratos/index.html
+++ b/secciones/portfolio/retratos/autorretratos/index.html
@@ -67,13 +67,13 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/93VGmRK/autorretrato.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/93VGmRK/autorretrato.jpg"> </a>
             </div>
           </div>
           
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/xGTM5W8/autorretrato-caratula.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/xGTM5W8/autorretrato-caratula.jpg"> </a>
             </div>
           </div>
           
