--- a/secciones/portfolio/retratos/retratos/index.html
+++ b/secciones/portfolio/retratos/retratos/index.html
@@ -66,192 +66,192 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/qg7r9Px/retrato1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/qg7r9Px/retrato1.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/2KXYQ6h/retrato2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/2KXYQ6h/retrato2.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/yXfFWMv/retrato3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/yXfFWMv/retrato3.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/XLXPkpZ/retrato4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/XLXPkpZ/retrato4.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/qs2LZ7F/retrato5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/qs2LZ7F/retrato5.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/YBT3Stc/retrato6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/YBT3Stc/retrato6.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/dmbvTPh/retrato7.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/dmbvTPh/retrato7.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/C6t89z6/retrato8.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/C6t89z6/retrato8.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/HYX2pJC/retrato9.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/HYX2pJC/retrato9.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/K79Fn7S/retrato10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/K79Fn7S/retrato10.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/yB5Y44r/retrato11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/yB5Y44r/retrato11.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/Wyz1fVk/retrato12.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/Wyz1fVk/retrato12.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/nmHXPHr/retrato13.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/nmHXPHr/retrato13.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/HHffrS4/retrato14.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/HHffrS4/retrato14.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img src="https://i.ibb.co/Kr33NwF/retrato15.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img class="foto" src="https://i.ibb.co/Kr33NwF/retrato15.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img src="https://i.ibb.co/16yPzzD/retrato16.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img class="foto" src="https://i.ibb.co/16yPzzD/retrato16.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img src="https://i.ibb.co/DLwhLCM/retrato17.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img class="foto" src="https://i.ibb.co/DLwhLCM/retrato17.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img src="https://i.ibb.co/JF38gFb/retrato18.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img class="foto" src="https://i.ibb.co/JF38gFb/retrato18.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 19" data-bs-toggle="modal" data-bs-target="#modalImage19"><img src="https://i.ibb.co/SNfwtvN/retrato19.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 19" data-bs-toggle="modal" data-bs-target="#modalImage19"><img class="foto" src="https://i.ibb.co/SNfwtvN/retrato19.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 20" data-bs-toggle="modal" data-bs-target="#modalImage20"><img src="https://i.ibb.co/rGsTN64/retrato20.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 20" data-bs-toggle="modal" data-bs-target="#modalImage20"><img class="foto" src="https://i.ibb.co/rGsTN64/retrato20.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 21" data-bs-toggle="modal" data-bs-target="#modalImage21"><img src="https://i.ibb.co/0s0ccDS/retrato21.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 21" data-bs-toggle="modal" data-bs-target="#modalImage21"><img class="foto" src="https://i.ibb.co/0s0ccDS/retrato21.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 22" data-bs-toggle="modal" data-bs-target="#modalImage22"><img src="https://i.ibb.co/Tv6JxLK/retrato22.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 22" data-bs-toggle="modal" data-bs-target="#modalImage22"><img class="foto" src="https://i.ibb.co/Tv6JxLK/retrato22.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 23" data-bs-toggle="modal" data-bs-target="#modalImage23"><img src="https://i.ibb.co/60fkTPP/retrato23.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 23" data-bs-toggle="modal" data-bs-target="#modalImage23"><img class="foto" src="https://i.ibb.co/60fkTPP/retrato23.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 24" data-bs-toggle="modal" data-bs-target="#modalImage24"><img src="https://i.ibb.co/KzHgwqR/retrato24.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 24" data-bs-toggle="modal" data-bs-target="#modalImage24"><img class="foto" src="https://i.ibb.co/KzHgwqR/retrato24.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 25" data-bs-toggle="modal" data-bs-target="#modalImage25"><img src="https://i.ibb.co/wYtH746/retrato25.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 25" data-bs-toggle="modal" data-bs-target="#modalImage25"><img class="foto" src="https://i.ibb.co/wYtH746/retrato25.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 26" data-bs-toggle="modal" data-bs-target="#modalImage26"><img src="https://i.ibb.co/Kxc4BSK/retrato26.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 26" data-bs-toggle="modal" data-bs-target="#modalImage26"><img class="foto" src="https://i.ibb.co/Kxc4BSK/retrato26.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 27" data-bs-toggle="modal" data-bs-target="#modalImage27"><img src="https://i.ibb.co/wh4p6zg/retrato27.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 27" data-bs-toggle="modal" data-bs-target="#modalImage27"><img class="foto" src="https://i.ibb.co/wh4p6zg/retrato27.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 28" data-bs-toggle="modal" data-bs-target="#modalImage28"><img src="https://i.ibb.co/x7L2G09/retrato28.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 28" data-bs-toggle="modal" data-bs-target="#modalImage28"><img class="foto" src="https://i.ibb.co/x7L2G09/retrato28.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 29" data-bs-toggle="modal" data-bs-target="#modalImage29"><img src="https://i.ibb.co/tXWgFkQ/retrato29.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 29" data-bs-toggle="modal" data-bs-target="#modalImage29"><img class="foto" src="https://i.ibb.co/tXWgFkQ/retrato29.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 30" data-bs-toggle="modal" data-bs-target="#modalImage30"><img src="https://i.ibb.co/ck3N2dP/retrato30.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 30" data-bs-toggle="modal" data-bs-target="#modalImage30"><img class="foto" src="https://i.ibb.co/ck3N2dP/retrato30.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 31" data-bs-toggle="modal" data-bs-target="#modalImage31"><img src="https://i.ibb.co/BLK9Skv/retrato31.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 31" data-bs-toggle="modal" data-bs-target="#modalImage31"><img class="foto" src="https://i.ibb.co/BLK9Skv/retrato31.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 32" data-bs-toggle="modal" data-bs-target="#modalImage32"><img src="https://i.ibb.co/nmd6mwX/retrato32.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 32" data-bs-toggle="modal" data-bs-target="#modalImage32"><img class="foto" src="https://i.ibb.co/nmd6mwX/retrato32.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 33" data-bs-toggle="modal" data-bs-target="#modalImage33"><img src="https://i.ibb.co/1sN68ds/retrato33.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 33" data-bs-toggle="modal" data-bs-target="#modalImage33"><img class="foto" src="https://i.ibb.co/1sN68ds/retrato33.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 34" data-bs-toggle="modal" data-bs-target="#modalImage34"><img src="https://i.ibb.co/XsGtRYq/retrato34.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 34" data-bs-toggle="modal" data-bs-target="#modalImage34"><img class="foto" src="https://i.ibb.co/XsGtRYq/retrato34.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 35" data-bs-toggle="modal" data-bs-target="#modalImage35"><img src="https://i.ibb.co/ykQBc4d/retrato35.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 35" data-bs-toggle="modal" data-bs-target="#modalImage35"><img class="foto" src="https://i.ibb.co/ykQBc4d/retrato35.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 36" data-bs-toggle="modal" data-bs-target="#modalImage36"><img src="https://i.ibb.co/MCZJtzk/retrato36.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 36" data-bs-toggle="modal" data-bs-target="#modalImage36"><img class="foto" src="https://i.ibb.co/MCZJtzk/retrato36.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 37" data-bs-toggle="modal" data-bs-target="#modalImage37"><img src="https://i.ibb.co/4PGkPPy/retrato37.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 37" data-bs-toggle="modal" data-bs-target="#modalImage37"><img class="foto" src="https://i.ibb.co/4PGkPPy/retrato37.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 38" data-bs-toggle="modal" data-bs-target="#modalImage38"><img src="https://i.ibb.co/88b26pZ/CARATULA-GALERIA-IPH-8673.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 38" data-bs-toggle="modal" data-bs-target="#modalImage38"><img class="foto" src="https://i.ibb.co/88b26pZ/CARATULA-GALERIA-IPH-8673.jpg"> </a>            
             </div>
           </div>
   
