--- a/secciones/portfolio/teatro/jorobado/index.html
+++ b/secciones/portfolio/teatro/jorobado/index.html
@@ -68,127 +68,127 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/TqwBcqF/jorobado1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/TqwBcqF/jorobado1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/hdxfjCW/jorobado2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/hdxfjCW/jorobado2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/qsK5g7Y/jorobado3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/qsK5g7Y/jorobado3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/wW9q9ng/jorobado4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/wW9q9ng/jorobado4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/3BXdXZ2/jorobado5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/3BXdXZ2/jorobado5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/dkWSLHF/jorobado6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/dkWSLHF/jorobado6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/44KmQVP/jorobado7.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/44KmQVP/jorobado7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/2311gtL/jorobado8.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/2311gtL/jorobado8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/b2zyzBL/jorobado9.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/b2zyzBL/jorobado9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/bB9rbkm/jorobado10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/bB9rbkm/jorobado10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/N38yXMr/jorobado11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/N38yXMr/jorobado11.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/D15N04g/jorobado12.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/D15N04g/jorobado12.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/R9dKf70/jorobado13.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/R9dKf70/jorobado13.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/nLyX1wn/jorobado14.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/nLyX1wn/jorobado14.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img src="https://i.ibb.co/pJPkyWx/jorobado15.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img class="foto" src="https://i.ibb.co/pJPkyWx/jorobado15.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img src="https://i.ibb.co/DC7z8mP/jorobado16.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img class="foto" src="https://i.ibb.co/DC7z8mP/jorobado16.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img src="https://i.ibb.co/9TJYBH7/jorobado17.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img class="foto" src="https://i.ibb.co/9TJYBH7/jorobado17.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img src="https://i.ibb.co/kyD6pwk/jorobado18.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img class="foto" src="https://i.ibb.co/kyD6pwk/jorobado18.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 19" data-bs-toggle="modal" data-bs-target="#modalImage19"><img src="https://i.ibb.co/VMLZ7vQ/jorobado19.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 19" data-bs-toggle="modal" data-bs-target="#modalImage19"><img class="foto" src="https://i.ibb.co/VMLZ7vQ/jorobado19.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 20" data-bs-toggle="modal" data-bs-target="#modalImage20"><img src="https://i.ibb.co/dPtFB1f/jorobado20.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 20" data-bs-toggle="modal" data-bs-target="#modalImage20"><img class="foto" src="https://i.ibb.co/dPtFB1f/jorobado20.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 21" data-bs-toggle="modal" data-bs-target="#modalImage21"><img src="https://i.ibb.co/Jqs0tg1/jorobado21.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 21" data-bs-toggle="modal" data-bs-target="#modalImage21"><img class="foto" src="https://i.ibb.co/Jqs0tg1/jorobado21.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 22" data-bs-toggle="modal" data-bs-target="#modalImage22"><img src="https://i.ibb.co/tpjJptq/jorobado22.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 22" data-bs-toggle="modal" data-bs-target="#modalImage22"><img class="foto" src="https://i.ibb.co/tpjJptq/jorobado22.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 23" data-bs-toggle="modal" data-bs-target="#modalImage23"><img src="https://i.ibb.co/xmSL64g/jorobado23.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 23" data-bs-toggle="modal" data-bs-target="#modalImage23"><img class="foto" src="https://i.ibb.co/xmSL64g/jorobado23.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 24" data-bs-toggle="modal" data-bs-target="#modalImage24"><img src="https://i.ibb.co/cLFNm8j/jorobado24.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 24" data-bs-toggle="modal" data-bs-target="#modalImage24"><img class="foto" src="https://i.ibb.co/cLFNm8j/jorobado24.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 25" data-bs-toggle="modal" data-bs-target="#modalImage25"><img src="https://i.ibb.co/Jk19Ksx/jorobado-caratula.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 25" data-bs-toggle="modal" data-bs-target="#modalImage25"><img class="foto" src="https://i.ibb.co/Jk19Ksx/jorobado-caratula.jpg"   > </a>
             </div>
           </div>
           
